--- a/main.css
+++ b/main.css
@@ -10,37 +10,53 @@ Want it like this for now. Might change later. Without left and top there is a l
 grey showing.
 ---------------------------------------------------------------------------------------------*/
 .container{
-    background-color: #fff;
+    background-image: url("../pictures/fade_away.JPG");
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 100%;
     width: 100%;
     left: 0px;
     top: 0px;
-    margin: 0;
     position: absolute;
+    
 }
 /*-----------------------------------------------------------------------------------------
 Says the page your in. If your home it says home. If its intrest page says interest or w.e
 -----------------------------------------------------------------------------------------*/
 header{
-    margin: 0;
+    color: #fff;
+    background-color: #000;
+    margin: -25px;
+    text-align: center;
+
+}
+/*----------------------------------------------------------------------
+
+-----------------------------------------------------------------------*/
+#nav {
+    margin-top: -3px;
+    margin-left: 31%;
     padding: 0;
     text-align: center;
+    position: absolute;
 }
-
-#nav {
-    margin: 0px;
-    padding: 0px;
-    text-align: center;
-}
-
-#lst{
+#btn{ 
+    list-style: none;
     display: inline-flex;
-    
 }
 
-.btn{
-    background-color: #ffff70;
-    text-align: center;
+#btn a:link{
+    text-decoration: none;
+    color: #fff;
+    background-color:#000;
     width: 100px;
-    padding: 10px;
+    padding: 10px 30px 10px 30px;
+}
+#btn a:visited{
+    color:#fff;
+}
+#btn a:hover{
+    color: #000;
+    background-color: #fff;
+    cursor: pointer;
 }
