--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
+html {
+	font-family: Quicksand,sans-serif;
+}
+
 /*-----------------------------------------
 Sets background color
 ------------------------------------------*/
 body{
     background: #777;
+
 }
 /*------------------------------------------------------------------------------------------
 The container is white and takes up the whole screen. Cant see the body backbground color. 
@@ -13,10 +18,11 @@ grey showing.
     background-image: url("../pictures/fade_away.JPG");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+	background-attachment: fixed;
+    height: auto;
     width: 100%;
-    left: 0px;
-    top: 0px;
+	margin-left: -10px;
+	margin-top: -10px;
     position: absolute;
     
 }
@@ -24,25 +30,34 @@ grey showing.
 Says the page your in. If your home it says home. If its intrest page says interest or w.e
 -----------------------------------------------------------------------------------------*/
 header{
+	padding:0; 
     color: #fff;
     background-color: #000;
-    margin: -25px;
+	margin-top: -19px;
     text-align: center;
+	z-index: 6;
+	
 
 }
 /*----------------------------------------------------------------------
 
 -----------------------------------------------------------------------*/
 #nav {
-    margin-top: -3px;
-    align-content: center;
+
+	margin-left: 100px;
+	width: 100%;
     padding: 0;
+	margin-top: -29px;
+	margin-left: 0%; /*---some reasone it puts a space at the right of the webpage without this.--*/
     text-align: center;
-    position: absolute;
+    position: fixed;
+	z-index: 5;
+
 }
 #btn{ 
     list-style: none;
     display: inline-flex;
+
 }
 
 #btn a:link{
@@ -50,7 +65,7 @@ header{
     color: #fff;
     background-color:#000;
     width: 100px;
-    padding: 0;
+    padding: 10px 30px 10px 30px;
 }
 #btn a:visited{
     color:#fff;
@@ -59,4 +74,16 @@ header{
     color: #000;
     background-color: #fff;
     cursor: pointer;
+}
+#content{
+	background-color: #000;
+	border-width: 25px;
+	border-color: fff;
+	height: auto;
+	width: 80%;
+	margin-left: 10%;
+	opacity: .65;
+}
+p{
+	color: #fff;
 }
