--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,11 @@ body{
 
 }
 
-.container{
-	margin: -8px;
-    position: : absolute; 
+.container-fluid{
+    padding: 0px !important;
+    
 }
+
 /*-----------------------------------------------------------------------------------------
 Says the page your in. If your home it says home. If its intrest page says interest or w.e
 -----------------------------------------------------------------------------------------*/
@@ -23,23 +24,22 @@ Says the page your in. If your home it says home. If its intrest page says inter
 #nav {
 	background-color: #000;
 	color: #fff;
-	height: 55px;
-	width: 100%;
+	height: 35px;
+    width: 100% !important;
+	width: auto;
     position: fixed;
 	z-index: 1;
 
 }
-#name{
-	padding-left: 2.7%;
+#Name {
+	text-align: left;
 }
 #btn{ 
 	width: auto;
     list-style: none;
     display: flex;
-	position: fixed;
     padding-top: .25%;
-	padding-left: 33.3%;
-	top: 0px;
+	padding-left: 30%;
 
 }
 
@@ -59,20 +59,37 @@ Says the page your in. If your home it says home. If its intrest page says inter
 }
 
 #picture {
+    width: 110%;
     height: 80%;
 }
 
-#picture, img {
+.picture, img {
     display: block;
     width: 100%;
 }
 #content{
 	background-color: #000;
 	width: auto;
-    padding: 1%;
+
 }
 p{
+    padding: 0 3%;
+    margin: 0px !important;
 	color: #fff;
+}
+.sections{
+	border-top: 2px solid #fff;
+    color: #fff;
+    margin: 0px !important;
+    text-align: center;
+}
+
+#Projects{
+    background-color: #222;
+}
+
+#Contact{
+    background-color: #333;
 }
 
 footer{
