--- a/css/main.css
+++ b/css/main.css
@@ -1,102 +1,114 @@
-html {
-	font-family: sans-serif;
+html,body{
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-/*-----------------------------------------
-Sets background color
-------------------------------------------*/
-body{
-    background: #777;
 
+
+
+
+
+/* Navbar css code start */
+
+nav{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    opacity: .90;
+    background: #000;
 }
 
-.container-fluid{
-    padding: 0px !important;
-    
+
+li{
+    float: left;
+}
+/*Title*/
+p{ /* might have to change p if there is problem */
+    font-size: 18px;
+    font: Bookman;
+    margin: 8px;
 }
 
-/*-----------------------------------------------------------------------------------------
-Says the page your in. If your home it says home. If its intrest page says interest or w.e
------------------------------------------------------------------------------------------*/
-/*----------------------------------------------------------------------
-
------------------------------------------------------------------------*/
-#nav {
-	background-color: #000;
-	color: #fff;
-	height: 35px;
-    width: 100% !important;
-	width: auto;
-    position: fixed;
-	z-index: 1;
-
+#nav-title{
+    display: inline-block;
+    color: white;
 }
-#Name {
-	position: float-left;
-}
-#btn{ 
-	width: auto;
-    list-style: none;
-    display: flex;
-    padding-top: .25%;
-	padding-left: 30%;
+/* Title End */
 
+/* Menu drop down*/
+.sub-menu-parent{
+    position: relative;
+    float: right;
+    margin-right: 1px;
 }
 
-#btn a:link{
-    text-decoration: none;
-    color: #fff;
-    background-color:#000;
-    padding: 10px 40px 10px 40px;
-}
-#btn a:visited{
-    color:#fff;
-}
-#btn a:hover{
-    color: #000;
-    background-color: #fff;
-    cursor: pointer;
+.nav-links{
+    visibility: hidden;
+    list-style-type: none;
+    /* hides sub-menu */
+    opacity: 0;
+    position: absolute;
+    padding: 0;
+    margin-right: 10px;
+    transform: translateY(-2em);
+    z-index: -1;
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
 }
 
-#picture {
-    width: 110%;
-    height: 80%;
+.sub-menu-parent:focus .nav-links,
+.sub-menu-parent:focus-within .nav-links,
+.sub-menu-parent:hover .nav-links {
+    visibility: visible;
+    /* shows sub-menu */
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(-11%);
+    transition-delay: 0s, 0s, 0.3s;
+    /* this removes the transition delay so the menu will be  visible while the other styles transition */
 }
 
-.picture, img {
+a{
     display: block;
-    width: 100%;
-}
-#content{
-	background-color: #000;
-	width: auto;
-
-}
-p{
-    padding: 0 3%;
-    margin: 0px !important;
-	color: #fff;
-}
-.sections{
-	border-top: 2px solid #fff;
-    color: #fff;
-    margin: 0px !important;
-    text-align: center;
+    background: black; 
+    color: #ffff;
+    padding: 8px 16px;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: "Times New Roman", Georgia, Serif;
 }
 
-#Projects{
-    background-color: #222;
+a:hover {
+    background: #0000;
+    color: dimgrey;
+    text-decoration: none;
 }
 
-#Contact{
-    background-color: #333;
+.nav-links{
+    background: #000;
 }
 
-footer{
-    margin-bottom: -1%;
-    padding: .5%;
-    text-align: center;
-    background-color: #777;
-    color: #fff;
+#parallax1{
+    background-image: url(/pictures/image1.JPG);
+    height: 100%;
+    margin: 0;
+    margin-top: -27.4px;
+    padding: 0;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
     
 }
+
+#intro-content{
+    color: #fff;
+    height: auto;
+    text-align: center;
+    font-size: 130%;
+    vertical-align: middle;
+}
+
+
+
