--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 html,body{
+    background-color: #000;
+    font-family: 'lato', serif;
     height: 100%;
     margin: 0;
     padding: 0;
+    
 }
-
-
 
 
 
@@ -15,7 +16,6 @@ nav{
     list-style-type: none;
     position: fixed;
     margin-top: 15%;
-    margin-left: 2.5%;
     z-index: 1;
 }
 
@@ -75,7 +75,6 @@ a{
     padding: 8px 16px;
     text-decoration: none;
     font-size: 18px;
-    font-family: "Times New Roman", Georgia, Serif;
 }
 
 a:hover {
@@ -88,25 +87,22 @@ a:hover {
 }
 
 #parallax1{
-    background-image: url(/pictures/image1.JPG);
+    background-image: url(/pictures/image1.jpg);
     height: 90%;
-    width: 95%;
-    margin-top: 2.5%;
-    margin-left: 2.5%;
+    width: 100%;
+    margin: 2.5% 0 10% 0;
     padding: 0;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -1;
-    
-    
 }
 
-#intro-content{
+.content{
     background-color: #000;
     color: #fff;
-    opacity: .8;
+    opacity: .6;
     height: 100%;
     text-align: center;
     font-size: 130%;
@@ -114,11 +110,22 @@ a:hover {
 }
 
 
-#intro-content h1{
+.content h1{
     margin: 0;
     opacity: 2;
     padding-top: 10%;
 }
 
-
+#parallax2{
+    background-image: url(/pictures/image2.JPG);
+    height: 90%;
+    width: 100%;
+    margin: 2.5% 0 10% 0;
+    padding: 0;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
+}
 
