--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ a:hover {
 }
 
 #parallax1{
-    background-image: url(/pictures/image1.jpg);
+    background-image: url(/pictures/image1.JPG);
     height: 90%;
     width: 100%;
     margin: 2.5% 0 10% 0;
