updated a couple things

--- a/styleSheets/main.css
+++ b/styleSheets/main.css
@@ -40,7 +40,7 @@ li {
     height: 700px;
     padding-top: 4.5em;
     position: absolute;
-    background: url(../images/banner.jpg);
+    background: url(../images/banner.JPG);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
